# plumdemo

./: CMakeLists.txt  LICENSE.txt  README.md
host/: CMakeLists.txt
host/src/: audio.cpp  audio.h  controller.cpp  controller.h  engine.cpp  engine.h  glade.cpp  plugincatalog.cpp  plugincatalog.h  pluginview.cpp  pluginview.h  plumhost.cpp  plumhost.h
plugin/: CMakeLists.txt
plugin/src/: abcdwindow.cpp  abcdwindow.h  library.cpp  utils.cpp  utils.h
plugin/src/demo-gain/: gain.cpp  gain.h  gui.cpp
plugin/src/demo-synth/: gui.cpp  synth.cpp  synth.h  voice.h
